17087
The parser accepts expressions without braces after "try" but when an open paren occurs, it fails to parse it as part of the expressions and expects the whole expression to be enclosed in parens:

{code}
scala> try 1 + 1 finally ()
res0: Int = 2

scala> try (1) + 1 finally ()
<console>:1: error: ';' expected but identifier found.
       try (1) + 1 finally ()
               ^
{code}
